Possible css fix
Fixed image not showing correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -10350,9 +10350,43 @@ body {
   font-size: 4.5rem;
 }
 
-.team-image { 
+/* .team-image { 
+  /* max-height: 320px !important;
+  min-width: 100% !important;
+  min-height: 260px !important;
+  overflow: hidden; */
+/* }
+
+@media only screen and (max-width: 600px) {
+  .team-image {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    border-style: none;
+  }
+} */ 
+
+@media (min-width: 992px) {
+  .team-image {
+    max-height: 370px !important;
+    min-width: 100% !important;
+    min-height: 260px !important;
+    overflow: hidden;
+  }
+}
+/* .team-image {
   max-height: 320px !important;
   min-width: 100% !important;
   min-height: 260px !important;
   overflow: hidden;
+} */
+
+@media (max-width: 992px) {
+  .team-image {
+
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    border-style: none;
+  }
 }
